appId: com.deancochran.gradientpeak.dev
env:
  USER_EMAIL: "test@example.com"
  USER_PASS: "password123"
---
- runFlow:
    file: ../reusable/bootstrap.yaml
- runFlow:
    file: ../reusable/login.yaml
    env:
      email: "${USER_EMAIL}"
      password: "${USER_PASS}"
- tapOn: "Record"
- extendedWaitUntil:
    visible:
      id: "record-screen-ready"
    timeout: 10000
- tapOn:
    id: "recording-activity-control-button"
- extendedWaitUntil:
    visible:
      id: "record-activity-screen"
    timeout: 10000
- tapOn:
    id: "record-activity-option-bike"
- tapOn:
    id: "record-activity-save-button"
- extendedWaitUntil:
    visible:
      id: "recording-start-button"
    timeout: 10000
